Fix build warnings across modules and disable browser popups during unit tests