@@ -190,7 +190,7 @@ public final class GeckoRemoteRegistry {
      */
     public static String getExternalIPAddress() throws MalformedURLException, IOException {
         //ask a site to get the IP seen on the internet
-        URL getMyIP = new URL(_ipQuerySite);
+        URL getMyIP = java.net.URI.create(_ipQuerySite).toURL();
         try (BufferedReader in = new BufferedReader(new InputStreamReader(getMyIP.openStream(), StandardCharsets.UTF_8))) {
             return in.readLine(); //the IP is the first line of the page
         }
